Address Javadoc warnings